# FileAnalyzer

./: .gitignore
starter/: CMakeLists.txt  LICENSE
starter/src/: FileAnalyzer.h  FileAnalyzerCode.cpp  FileAnalyzerCode.h  FileAnalyzerCsv.cpp  FileAnalyzerCsv.h  FileAnalyzerFile.cpp  FileAnalyzerFile.h  FileAnalyzerPng.cpp  FileAnalyzerPng.h  FileAnalyzerText.cpp  FileAnalyzerText.h  FileAnalyzerWav.cpp  FileAnalyzerWav.h  main.cpp
starter/tests/: README.md  run_test
starter/tests/PinkPanther30.wav/: --get-size
starter/tests/donut_deobfuscated.c/: donut_deobfuscated.c
starter/tests/fox.txt/: --text-get-letter-count  --text-get-letter-count-sorted  fox.txt
starter/tests/lorem_ipsum.txt/: --text-get-letter-count  --text-get-letter-count-sorted  lorem_ipsum.txt
starter/tests/names.csv/: names.csv
starter/tests/transport.csv/: transport.csv
starter/tests/unbalanced_parens.cpp/: unbalanced_parens.cpp
